# Ext_div_GA

./: Cargo.toml  README.md  out.txt  out2.txt
src/: GA.rs  main.rs  utils.rs
src/GA/: fitness.rs  reproduction.rs
