[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faer-core     = { git = "https://github.com/sarah-ek/faer-rs" }
faer-lu       = "0.9"
faer-qr       = "0.9"
faer-cholesky = "0.9"
faer-svd      = "0.9"
