[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faer-core     = { git = "https://github.com/sarah-ek/faer-rs" }
faer-lu       = "0.9"
faer-qr       = "0.9"
faer-cholesky = "0.9"
faer-svd      = "0.9"
simba = "0.8.1"
rand = "0.8.5"
nalgebra = "0.32.3"
derivative = "2.2.0"
num-traits = "0.2.16"
typenum = "1.16.0"
wedged = "0.1.0"
# math = "0.10.0"
